<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightTitleSize"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/colorTextWhite"
        android:background="@color/colorPrimaryYellow"
        android:text="@string/txtEditarTitulo"/>

    <EditText
        android:id="@+id/txtNombreUsuarioEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtNombreUsuario"/>

    <EditText
        android:id="@+id/txtCorreoUsuarioEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtCorreoUsuario"/>

    <EditText
        android:id="@+id/txtTelefonoUsuarioEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtTelefonoUsuario"/>

    <EditText
        android:id="@+id/txtContrasenaActualEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtContrasenaActual"/>

    <EditText
        android:id="@+id/txtContrasenaNuevaEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtContrasenaNueva"/>

</LinearLayout>