<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightTitleSize"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/colorTextWhite"
        android:background="@color/colorPrimaryYellow"
        android:text="@string/txtAgregarTarjeta"/>

    <EditText
        android:id="@+id/txtNombrePropietario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtNombre"/>

    <EditText
        android:id="@+id/txtNumTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="number"
        android:hint="@string/txtNumTarjeta"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/mesesSpinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:entries="@array/meses"
            android:prompt="@string/mes" />

        <Spinner
            android:id="@+id/anosSpinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:entries="@array/anos"
            android:prompt="@string/ano" />

        <EditText
            android:id="@+id/txtCVC"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:inputType="number"
            android:hint="@string/txtCVC"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/btnCancelarTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/colorAccent"
            android:text="CANCELAR"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnAgregarTarjeta"
            android:layout_toStartOf="@+id/btnAgregarTarjeta"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:textColor="@color/colorAccent"
            android:text="ACEPTAR"
            android:id="@+id/btnAgregarTarjeta" />

    </RelativeLayout>

    <TextView
        android:id="@+id/disclaimerTarjeta"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almacenamientoDisclaimer"/>


</LinearLayout>